[tool.poetry]
name = "github-actions-test"
version = "0.1.0"
description = ""
authors = ["yasu_umi <yasu.umi.19910101@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.930"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
